# swagger-output.json
@@ -84,7 +84,7 @@
             "description": "Information do status.",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/AddOrderStatus"
+              "$ref": "#/definitions/UpdateOrderStatus"
             }
           }
         ],
@@ -151,12 +151,8 @@
             "in": "body",
             "description": "Information order.",
             "required": true,
-            "chema": {
-              "$ref": "#/definitions/AddOrder"
-            },
             "schema": {
-              "type": "object",
-              "properties": {}
+              "$ref": "#/definitions/AddOrder"
             }
           }
         ],
@@ -479,22 +475,32 @@
         "description": {
           "type": "string",
           "example": "pending"
+        },
+        "statusName": {
+          "type": "string",
+          "example": "pending"
         }
       },
       "required": [
-        "description"
+        "description",
+        "statusName"
       ]
     },
     "UpdateOrderStatus": {
       "type": "object",
       "properties": {
-        "orderStatus": {
+        "description": {
           "type": "string",
-          "example": "ID new status"
+          "example": "pending"
+        },
+        "statusName": {
+          "type": "string",
+          "example": "pending"
         }
       },
       "required": [
-        "orderStatus"
+        "description",
+        "statusName"
       ]
     },
     "AddPayment": {
